--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "devDependencies": {
         "@fontsource-variable/recursive": "5.0.18",
         "@ianvs/prettier-plugin-sort-imports": "4.3.1",
+        "@rgossiaux/svelte-headlessui": "2.0.0",
         "@sveltejs/adapter-vercel": "5.4.1",
         "@sveltejs/kit": "2.5.19",
         "@sveltejs/vite-plugin-svelte": "3.1.1",
+        "@types/lunr": "2.3.7",
         "autoprefixer": "10.4.19",
         "cssnano": "7.0.4",
+        "lunr": "2.3.9",
+        "phosphor-icons-svelte": "1.2.0",
         "postcss": "8.4.40",
         "prettier": "3.3.3",
         "prettier-plugin-svelte": "3.2.6",
         "prettier-plugin-tailwindcss": "0.6.5",
         "remeda": "2.7.0",
         "svelte": "4.2.18",
+        "sveltekit-search-params": "3.0.0",
         "tailwindcss": "3.4.7",
         "tailwindcss-addons": "1.10.1",
         "typescript": "5.5.4",
