--- a/package.json
+++ b/package.json
@@ -6,28 +6,29 @@
         "format": "prettier -w ."
     },
     "devDependencies": {
-        "@fontsource-variable/recursive": "5.0.18",
+        "@fontsource-variable/recursive": "5.1.0",
         "@ianvs/prettier-plugin-sort-imports": "4.3.1",
-        "@rgossiaux/svelte-headlessui": "2.0.0",
-        "@sveltejs/adapter-vercel": "5.4.1",
-        "@sveltejs/kit": "2.5.19",
-        "@sveltejs/vite-plugin-svelte": "3.1.1",
+        "@sveltejs/adapter-vercel": "5.4.6",
+        "@sveltejs/kit": "2.7.4",
+        "@sveltejs/vite-plugin-svelte": "4.0.0",
         "@types/lunr": "2.3.7",
-        "autoprefixer": "10.4.19",
-        "cssnano": "7.0.4",
+        "@zag-js/radio-group": "0.77.0",
+        "@zag-js/select": "0.77.0",
+        "@zag-js/svelte": "0.77.0",
+        "autoprefixer": "10.4.20",
+        "cssnano": "7.0.6",
         "lunr": "2.3.9",
-        "phosphor-icons-svelte": "1.2.0",
-        "postcss": "8.4.40",
+        "phosphor-icons-svelte": "2.0.0",
+        "postcss": "8.4.47",
         "prettier": "3.3.3",
-        "prettier-plugin-svelte": "3.2.6",
-        "prettier-plugin-tailwindcss": "0.6.5",
-        "remeda": "2.7.0",
-        "svelte": "4.2.18",
-        "sveltekit-search-params": "3.0.0",
-        "tailwindcss": "3.4.7",
-        "tailwindcss-addons": "1.10.1",
-        "typescript": "5.5.4",
-        "vite": "5.3.5"
+        "prettier-plugin-svelte": "3.2.7",
+        "prettier-plugin-tailwindcss": "0.6.8",
+        "remeda": "2.16.0",
+        "svelte": "5.1.9",
+        "tailwindcss": "3.4.14",
+        "tailwindcss-addons": "3.0.0",
+        "typescript": "5.6.3",
+        "vite": "5.4.10"
     },
     "type": "module"
 }
