--- a/package.json
+++ b/package.json
@@ -6,29 +6,27 @@
         "format": "prettier -w ."
     },
     "devDependencies": {
-        "@fontsource-variable/recursive": "5.1.0",
-        "@ianvs/prettier-plugin-sort-imports": "4.3.1",
-        "@sveltejs/adapter-vercel": "5.4.6",
-        "@sveltejs/kit": "2.7.4",
-        "@sveltejs/vite-plugin-svelte": "4.0.0",
+        "@fontsource-variable/recursive": "5.2.5",
+        "@ianvs/prettier-plugin-sort-imports": "4.4.1",
+        "@sveltejs/adapter-static": "3.0.8",
+        "@sveltejs/kit": "2.20.4",
+        "@sveltejs/vite-plugin-svelte": "5.0.3",
+        "@tailwindcss/vite": "4.1.3",
         "@types/lunr": "2.3.7",
-        "@zag-js/radio-group": "0.77.0",
-        "@zag-js/select": "0.77.0",
-        "@zag-js/svelte": "0.77.0",
-        "autoprefixer": "10.4.20",
-        "cssnano": "7.0.6",
         "lunr": "2.3.9",
-        "phosphor-icons-svelte": "2.0.0",
-        "postcss": "8.4.47",
-        "prettier": "3.3.3",
-        "prettier-plugin-svelte": "3.2.7",
-        "prettier-plugin-tailwindcss": "0.6.8",
-        "remeda": "2.16.0",
-        "svelte": "5.1.9",
-        "tailwindcss": "3.4.14",
-        "tailwindcss-addons": "3.0.0",
-        "typescript": "5.6.3",
-        "vite": "5.4.10"
+        "phosphor-icons-svelte": "2.0.8",
+        "postcss": "8.5.3",
+        "prettier": "3.5.3",
+        "prettier-plugin-svelte": "3.3.3",
+        "prettier-plugin-tailwindcss": "0.6.11",
+        "remeda": "2.21.2",
+        "svelte": "5.25.8",
+        "tailwindcss": "4.1.3",
+        "tailwindcss-addons": "4.2.0",
+        "typescript": "5.8.3",
+        "ui-ingredients": "1.3.0",
+        "vite": "6.2.5"
     },
-    "type": "module"
+    "type": "module",
+    "private": true
 }
