--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
         "@sveltejs/kit": "2.20.4",
         "@sveltejs/vite-plugin-svelte": "5.0.3",
         "@tailwindcss/vite": "4.1.3",
-        "@types/lunr": "2.3.7",
-        "lunr": "2.3.9",
+        "fuse.js": "7.1.0",
         "phosphor-icons-svelte": "2.0.8",
         "postcss": "8.5.3",
         "prettier": "3.5.3",
